fix wrap

--- a/style/main.css
+++ b/style/main.css
@@ -111,6 +111,7 @@ body {
   width: 100%;
 
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
@@ -217,23 +218,20 @@ main {
 
   font-size: 0.8rem;
 }
-.product-list__item__footer button:hover{
+.product-list__item__footer button:hover {
   background-color: var(--primary);
 }
 
-.product-list__item__footer button:active{
-  transform: scale(0.95); 
- 
+.product-list__item__footer button:active {
+  transform: scale(0.95);
 }
 
-
-.product-list__item__footer button:hover{
+.product-list__item__footer button:hover {
   background-color: var(--primary);
 }
 
-.product-list__item__footer button:active{
-  transform: scale(0.95); 
- 
+.product-list__item__footer button:active {
+  transform: scale(0.95);
 }
 
 .product-card__price {
@@ -331,11 +329,7 @@ main {
   .header__search-form {
     width: 300px;
   }
-  .filters {
-    flex-direction: row;
-  }
   .products {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
 }
